# Asistencia-QR---copia

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  build.sh  database.sql  fly.toml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: fly-deploy.yml
src/domain/: entities.py  repositories.py
src/infrastructure/: email_service.py  mysql_connection.py  qr_generator.py  repositories_mysql.py
src/jobs/: run_weekly_report.py
src/use_cases/: get_report.py  list_companies.py  mark_attendance.py  register_employee.py
static/css/: app.css
templates/: admin_add_employee.html  admin_dashboard.html  admin_edit_employee.html  admin_list_employees.html  attendance_records.html  base.html  error.html  incomplete_markings.html  index.html  login.html  report.html  scan.html  weekly_report.html
